# wedding-backend

./: .gitignore  pyproject.toml
backend/: settings.py
backend/apps/config/: admin.py  apps.py  models.py
backend/apps/config/migrations/: 0001_initial.py  0002_alter_image_created_at.py  0003_invite.py
