[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Danilo <daconnas.dcn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"
Django = "^4.0.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipdb = "^0.13.9"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
