[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Danilo <daconnas.dcn@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
Django = "^4.0.4"
gunicorn = "^20.1.0"
whitenoise = "^6.1.0"
django-cloudinary-storage = "^0.3.0"
python-decouple = "^3.6"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.12.0"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipdb = "^0.13.9"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
